manageDates -> when persisted, display new status of unavailable and booked dates